--- a/ceppp_patient_partenaire/views/ceppp_patient_partenaire_templates.xml
+++ b/ceppp_patient_partenaire/views/ceppp_patient_partenaire_templates.xml
@@ -152,104 +152,6 @@
                 ng-controller="ImplicationController"
             >
                 <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()" />
-                <!--                <div class="form-group">-->
-                <!--                    <label class="col-md-3 col-sm-4 control-label" for="name">Name</label>-->
-                <!--                    <div class="col-md-7 col-sm-8">-->
-                <!--                        <input-->
-                <!--                            type="text"-->
-                <!--                            class="form-control o_website_form_input"-->
-                <!--                            name="name"-->
-                <!--                            t-attf-value="#{name}"-->
-                <!--                        />-->
-                <!--                    </div>-->
-                <!--                </div>-->
-                <div class="form-group">
-                    <!--                    <label class="col-md-3 col-sm-4 control-label" for="role">Rôle</label>-->
-                    <div class="col-md-7 col-sm-8">
-                        <fieldset>
-                            <legend>Veuillez sélectionner vos rôles :</legend>
-                            <t t-foreach="role" t-as="rol">
-                                <div>
-                                    <input
-                                        type="checkbox"
-                                        class="o_website_form_input"
-                                        name="role"
-                                        t-att-id="'role_' + rol.name + '_' + str(rol_index)"
-                                        t-att-value="rol.id"
-                                        t-att-checked="rol.id in default_role"
-                                    />
-                                    <label
-                                        t-att-for="'role_' + rol.name + '_' + str(rol_index)"
-                                        t-att-string="rol.name"
-                                    >
-                                        <t t-esc="rol.name" />
-                                    </label>
-                                </div>
-                            </t>
-                        </fieldset>
-                    </div>
-                </div>
-                <div class="form-group" id="div_autre_role">
-                    <label class="col-md-3 col-sm-4 control-label" for="role_autre">Autre rôle</label>
-                    <div class="col-md-7 col-sm-8">
-                        <input
-                            type="text"
-                            class="form-control o_website_form_input"
-                            name="role_autre"
-                            t-att-value="default_role_autre"
-                        />
-                    </div>
-                </div>
-                <!--                <div class="form-group">-->
-                <!--                    <label class="col-md-3 col-sm-4 control-label" for="role_is_autre">Role_is_autre</label>-->
-                <!--                    <div class="col-md-7 col-sm-8">-->
-                <!--                        <input-->
-                <!--                            type="checkbox"-->
-                <!--                            class="form-control o_website_form_input"-->
-                <!--                            name="role_is_autre"-->
-                <!--                            id="role_is_autre"-->
-                <!--                            t-att-value="True"-->
-                <!--                            t-att-checked="default_role_is_autre"-->
-                <!--                        />-->
-                <!--                    </div>-->
-                <!--                </div>-->
-                <div class="form-group">
-                    <!--                    <label class="col-md-3 col-sm-4 control-label" for="domaine">Domaine</label>-->
-                    <div class="col-md-7 col-sm-8">
-                        <fieldset>
-                            <legend>Veuillez sélectionner les domaines :</legend>
-                            <t t-foreach="domaine" t-as="dom">
-                                <div>
-                                    <input
-                                        type="checkbox"
-                                        class="o_website_form_input"
-                                        name="domaine"
-                                        t-att-id="'domaine_' + dom.name + '_' + str(dom_index)"
-                                        t-att-value="dom.id"
-                                        t-att-checked="dom.id in default_domaine"
-                                    />
-                                    <label
-                                        t-att-for="'domaine_' + dom.name + '_' + str(dom_index)"
-                                        t-att-string="dom.name"
-                                    >
-                                        <t t-esc="dom.name" />
-                                    </label>
-                                </div>
-                            </t>
-                        </fieldset>
-                    </div>
-                </div>
-                <div class="form-group" id="div_autre_domaine">
-                    <label class="col-md-3 col-sm-4 control-label" for="domaine_autre">Autre domaine</label>
-                    <div class="col-md-7 col-sm-8">
-                        <input
-                            type="text"
-                            class="form-control o_website_form_input"
-                            name="domaine_autre"
-                            t-att-value="default_domaine_autre"
-                        />
-                    </div>
-                </div>
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="titre">Titre du projet</label>
                     <div class="col-md-7 col-sm-8">
@@ -279,19 +181,6 @@
         <!-- prettier-ignore-start --><textarea class="form-control o_website_form_input" name="description" style="min-height: 120px"><t t-esc="default_description"/></textarea><!-- prettier-ignore-end -->
         </div>
                 </div>
-                <!--                <div class="form-group">-->
-                <!--                    <label class="col-md-3 col-sm-4 control-label" for="domaine_is_autre">Domaine_is_autre</label>-->
-                <!--                    <div class="col-md-7 col-sm-8">-->
-                <!--                        <input-->
-                <!--                            type="checkbox"-->
-                <!--                            class="form-control o_website_form_input"-->
-                <!--                            name="domaine_is_autre"-->
-                <!--                            id="domaine_is_autre"-->
-                <!--                            t-att-value="True"-->
-                <!--                            t-att-checked="default_domaine_is_autre"-->
-                <!--                        />-->
-                <!--                    </div>-->
-                <!--                </div>-->
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="echeance_debut">Échéance début</label>
                     <div class="col-md-7 col-sm-8">
@@ -336,6 +225,80 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <!--                    <label class="col-md-3 col-sm-4 control-label" for="domaine">Domaine</label>-->
+                    <div class="col-md-7 col-sm-8">
+                        <fieldset>
+                            <legend>Veuillez sélectionner les domaines :</legend>
+                            <t t-foreach="domaine" t-as="dom">
+                                <div>
+                                    <input
+                                        type="checkbox"
+                                        class="o_website_form_input"
+                                        name="domaine"
+                                        t-att-id="'domaine_' + dom.name + '_' + str(dom_index)"
+                                        t-att-value="dom.id"
+                                        t-att-checked="dom.id in default_domaine"
+                                    />
+                                    <label
+                                        t-att-for="'domaine_' + dom.name + '_' + str(dom_index)"
+                                        t-att-string="dom.name"
+                                    >
+                                        <t t-esc="dom.name" />
+                                    </label>
+                                </div>
+                            </t>
+                        </fieldset>
+                    </div>
+                </div>
+                <div class="form-group" id="div_autre_domaine">
+                    <label class="col-md-3 col-sm-4 control-label" for="domaine_autre">Autre domaine</label>
+                    <div class="col-md-7 col-sm-8">
+                        <input
+                            type="text"
+                            class="form-control o_website_form_input"
+                            name="domaine_autre"
+                            t-att-value="default_domaine_autre"
+                        />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <!--                    <label class="col-md-3 col-sm-4 control-label" for="role">Rôle</label>-->
+                    <div class="col-md-7 col-sm-8">
+                        <fieldset>
+                            <legend>Veuillez sélectionner vos rôles :</legend>
+                            <t t-foreach="role" t-as="rol">
+                                <div>
+                                    <input
+                                        type="checkbox"
+                                        class="o_website_form_input"
+                                        name="role"
+                                        t-att-id="'role_' + rol.name + '_' + str(rol_index)"
+                                        t-att-value="rol.id"
+                                        t-att-checked="rol.id in default_role"
+                                    />
+                                    <label
+                                        t-att-for="'role_' + rol.name + '_' + str(rol_index)"
+                                        t-att-string="rol.name"
+                                    >
+                                        <t t-esc="rol.name" />
+                                    </label>
+                                </div>
+                            </t>
+                        </fieldset>
+                    </div>
+                </div>
+                <div class="form-group" id="div_autre_role">
+                    <label class="col-md-3 col-sm-4 control-label" for="role_autre">Autre rôle</label>
+                    <div class="col-md-7 col-sm-8">
+                        <input
+                            type="text"
+                            class="form-control o_website_form_input"
+                            name="role_autre"
+                            t-att-value="default_role_autre"
+                        />
                     </div>
                 </div>
                 <div class="form-group" style="display:none">
@@ -616,24 +579,17 @@
                 <t t-set="card_body">
                     <div class="row">
                         <div class="col-12 col-md-6 mb-2 mb-md-0">
+                            <b>Titre du projet:</b>
+                            <span t-field="ceppp_implication.titre" />
+                        </div>
+                        <div class="col-12 col-md-6 mb-2 mb-md-0">
+                            <b>Nom de l'équipe:</b>
+                            <span t-field="ceppp_implication.nom_equipe" />
+                        </div>
+                        <div class="col-12 col-md-6 mb-2 mb-md-0">
                             <b>Description:</b>
                             <span t-field="ceppp_implication.description" />
                         </div>
-                        <div class="col-12 col-md-6 mb-2 mb-md-0">
-                            <b>Domaine:</b>
-                            <t t-foreach="ceppp_implication.domaine" t-as="dom">
-                                <a t-attf-href="/my/ceppp_implication_domaine/#{dom.id}" t-field="dom.name" />
-                                <t t-if="not dom_last">,</t>
-                            </t>
-                        </div>
-                        <div class="col-12 col-md-6 mb-2 mb-md-0">
-                            <b>Autres domaines:</b>
-                            <span t-field="ceppp_implication.domaine_autre" />
-                        </div>
-                        <!--                        <div class="col-12 col-md-6 mb-2 mb-md-0">-->
-                        <!--                            <b>Domaine Is Autre:</b>-->
-                        <!--                            <span t-field="ceppp_implication.domaine_is_autre" />-->
-                        <!--                        </div>-->
                         <div class="col-12 col-md-6 mb-2 mb-md-0">
                             <b>&#201;ch&#233;ance d&#233;but:</b>
                             <span t-field="ceppp_implication.echeance_debut" />
@@ -643,16 +599,16 @@
                             <span t-field="ceppp_implication.echeance_fin" />
                         </div>
                         <div class="col-12 col-md-6 mb-2 mb-md-0">
-                            <b>Nom de l'&#233;quipe:</b>
-                            <span t-field="ceppp_implication.nom_equipe" />
+                            <b>Domaine:</b>
+                            <t t-foreach="ceppp_implication.domaine" t-as="dom">
+                                <a t-attf-href="/my/ceppp_implication_domaine/#{dom.id}" t-field="dom.name" />
+                                <t t-if="not dom_last">,</t>
+                            </t>
                         </div>
-                        <!--                        <div class="col-12 col-md-6 mb-2 mb-md-0" style="display:none">-->
-                        <!--                            <b>Recruteur:</b>-->
-                        <!--                            <a-->
-                        <!--                                t-attf-href="/my/ceppp_recruteur/#{ceppp_implication.recruteur_id.id}"-->
-                        <!--                                t-field="ceppp_implication.recruteur_id.name"-->
-                        <!--                            />-->
-                        <!--                        </div>-->
+                        <div class="col-12 col-md-6 mb-2 mb-md-0" t-if="ceppp_implication.domaine_is_autre">
+                            <b>Autres domaines:</b>
+                            <span t-field="ceppp_implication.domaine_autre" />
+                        </div>
                         <div class="col-12 col-md-6 mb-2 mb-md-0">
                             <b>R&#244;le:</b>
                             <t t-foreach="ceppp_implication.role" t-as="rol">
@@ -660,17 +616,9 @@
                                 <t t-if="not rol_last">,</t>
                             </t>
                         </div>
-                        <div class="col-12 col-md-6 mb-2 mb-md-0">
+                        <div class="col-12 col-md-6 mb-2 mb-md-0" t-if="ceppp_implication.role_is_autre">
                             <b>Autres r&#244;les:</b>
                             <span t-field="ceppp_implication.role_autre" />
-                        </div>
-                        <!--                        <div class="col-12 col-md-6 mb-2 mb-md-0">-->
-                        <!--                            <b>Role Is Autre:</b>-->
-                        <!--                            <span t-field="ceppp_implication.role_is_autre" />-->
-                        <!--                        </div>-->
-                        <div class="col-12 col-md-6 mb-2 mb-md-0">
-                            <b>Titre du projet:</b>
-                            <span t-field="ceppp_implication.titre" />
                         </div>
                     </div>
                 </t>
